2008-10-13  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxtFrame::wxtFrame):
	Revert call to OnSize() that caused compile failure on linux.
	Bug #2159025

2008-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Explicitly set default color of first
	histogram to linestyle/linetype 0.
	Bug #2155287

2008-10-11  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: Document restriction on option order: "title
	<column>" must come immediately after "using".

2008-10-11  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: "help datastrings": The "first item" would
	usually be called a "column heading". Add some
	cross-references. "help label": see also "labels". "help data":
	see also "labels". "help plot title": mention getting title from
	column heading, and link to "datastrings".

2008-10-11  Michael Goffioul  <michael.goffioul@gmail.com>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Define rint for MSVC.
	Make code C compliant.

	* src/wxterminal/wxt_gui.cpp (wxtFrame::wxtFrame): Do not force toolbar
	item size. Force resize event at the end of frame creation.
	(wxt_init): Declare wxSetInstance.

2008-10-11  Michael Goffioul  <michael.goffioul@gmail.com>

	* src/win/winmain.h src/win/winmain.c (WinMain): Compute new variable
	szPackageDir from szModuleName, stripping possible "\bin\" at the end.

	* term/post.trm (PS_open_prologue_file): Use szPackageDir instead of
	szModuleName.

2008-10-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/pgnuplot.c: Document option "-e".

2008-10-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c (drawgraph):  Work around a Windows clipboard bug by
	using ExtCreatePen() only for linewidth != 1.  The clipboard loses the
	line color if created with ExtCreatePen(), but not CreatePenIndirect().
	Is the clipboard problem still present for thicker lines?

2008-10-07  Ethan Merritt  <merritt@u.washington.edu>
