@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.282 2008/09/30 04:55:01 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.283 2008/10/16 04:25:18 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -168,6 +168,7 @@ static TBOOLEAN check_for_variable_color __PROTO((struct curve_points *plot, str
 
 #ifdef EAM_OBJECTS
 static void plot_circles __PROTO((struct curve_points *plot));
+static void do_rectangle __PROTO((int dimensions, t_object *this_object, int style));
 #endif
 
 /* for plotting error bars
@@ -1404,17 +1405,12 @@ void
 place_objects(struct object *listhead, int layer, int dimensions, BoundingBox *clip_area)
 {
     t_object *this_object;
-    t_rectangle *this_rect;
-    double x1, y1, x2, y2;
-    int x, y;
-    unsigned int w, h;
+    double x1, y1;
     int style;
 
     for (this_object = listhead; this_object != NULL; this_object = this_object->next) {
 	struct lp_style_type lpstyle;
 	struct fill_style_type *fillstyle;
-	TBOOLEAN clip_x = FALSE;
-	TBOOLEAN clip_y = FALSE;
     
 	if (this_object->layer != layer)
 	    continue;
@@ -1432,8 +1428,11 @@ place_objects(struct object *listhead, int layer, int dimensions, BoundingBox *c
 	else
 	    fillstyle = &this_object->fillstyle;
 	style = style_from_fill(fillstyle);
-	
-	if (this_object->object_type == OBJ_CIRCLE) {
+
+	switch (this_object->object_type) {
+
+	case OBJ_CIRCLE:
+	{
 	    t_circle *e = &this_object->o.circle;
 	    double radius, junk;
 
@@ -1446,7 +1445,7 @@ place_objects(struct object *listhead, int layer, int dimensions, BoundingBox *c
 		map3d_position_r(&e->extent, &junkw, &junkh, "rect");
 		radius = junkw;
 	    } else
-		continue;
+		break;
 
 	    term_apply_lp_properties(&lpstyle);
 
@@ -1455,9 +1454,12 @@ place_objects(struct object *listhead, int layer, int dimensions, BoundingBox *c
 	    /* Retrace the border if the style requests it */
 	    if (need_fill_border(fillstyle))
 		do_arc((int)x1, (int)y1, radius, e->arc_begin, e->arc_end, 0);
+
+	    break;
 	}
 
-	if (this_object->object_type == OBJ_ELLIPSE) {
+	case OBJ_ELLIPSE:
+	{
 	    term_apply_lp_properties(&lpstyle);
 
 	    if (dimensions == 2)
@@ -1465,14 +1467,17 @@ place_objects(struct object *listhead, int layer, int dimensions, BoundingBox *c
 	    else if (splot_map)
 		do_ellipse(3, &this_object->o.ellipse, style);
 	    else
-		continue;
+		break;
 
 	    /* Retrace the border if the style requests it */
 	    if (need_fill_border(fillstyle))
-		    do_ellipse(dimensions, &this_object->o.ellipse, 0);
+		do_ellipse(dimensions, &this_object->o.ellipse, 0);
+
+	    break;
 	}
 
-	if (this_object->object_type == OBJ_POLYGON) {
+	case OBJ_POLYGON:
+	{
 	    term_apply_lp_properties(&lpstyle);
 
 	    do_polygon(dimensions, &this_object->o.polygon, style);
@@ -1480,114 +1485,21 @@ place_objects(struct object *listhead, int layer, int dimensions, BoundingBox *c
 	    /* Retrace the border if the style requests it */
 	    if (need_fill_border(fillstyle))
 		    do_polygon(dimensions, &this_object->o.polygon, 0);
+
+	    break;
 	}
 
-	/* Must be a rectangle */    
-	if (this_object->object_type == OBJ_RECTANGLE)
-	    this_rect = &this_object->o.rectangle;
-	else
-	    continue;
-
-	if (this_rect->type == 1) {
-	    double width, height;
-
-	    if (dimensions == 2 || this_rect->center.scalex == screen) {
-		map_position_double(&this_rect->center, &x1, &y1, "rect");
-		map_position_r(&this_rect->extent, &width, &height, "rect");
-	    } else if (splot_map) {
-		int junkw, junkh;
-		map3d_position_double(&this_rect->center, &x1, &y1, "rect");
-		map3d_position_r(&this_rect->extent, &junkw, &junkh, "rect");
-		width = junkw;
-		height = junkh;
-	    } else
-		continue;
-
-	    x1 -= width/2;
-	    y1 -= height/2;
-	    x2 = x1 + width;
-	    y2 = y1 + height;
-	    w = width;
-	    h = height;
-	    if (this_rect->extent.scalex == first_axes
-	    ||  this_rect->extent.scalex == second_axes)
-		clip_x = TRUE;
-	    if (this_rect->extent.scaley == first_axes
-	    ||  this_rect->extent.scaley == second_axes)
-		clip_y = TRUE;
-
-	} else {
-	    if ((dimensions == 2) 
-	    ||  (this_rect->bl.scalex == screen && this_rect->tr.scalex == screen)) {
-		map_position_double(&this_rect->bl, &x1, &y1, "rect");
-		map_position_double(&this_rect->tr, &x2, &y2, "rect");
-	    } else if (splot_map) {
-		map3d_position_double(&this_rect->bl, &x1, &y1, "rect");
-		map3d_position_double(&this_rect->tr, &x2, &y2, "rect");
-	    } else
-		continue;
-
-	    if (x1 > x2) {double t=x1; x1=x2; x2=t;}
-	    if (y1 > y2) {double t=y1; y1=y2; y2=t;}
-	    if (this_rect->bl.scalex == first_axes
-	    ||  this_rect->bl.scalex == second_axes)
-		clip_x = TRUE;
-	    if (this_rect->bl.scaley == first_axes
-	    ||  this_rect->bl.scaley == second_axes)
-		clip_y = TRUE;
+	case OBJ_RECTANGLE:
+	{
+	    do_rectangle(dimensions, this_object, style);
+	    break;
 	}
 
-	/* FIXME - Should there be a generic clip_rectangle() routine?	*/
-	/* Clip to the graph boundaries, but only if the rectangle 	*/
-	/* itself was specified in plot coords.				*/
-	if (clip_area) {
-	    if (clip_x && x1 < clip_area->xleft)
-		x1 = clip_area->xleft;
-	    if (clip_x && x2 > clip_area->xright)
-		x2 = clip_area->xright;
-	    if (clip_y && y1 < clip_area->ybot)
-		y1 = clip_area->ybot;
-	    if (clip_y && y2 > clip_area->ytop)
-		y2 = clip_area->ytop;
-	    if (x1 > x2 || y1 > y2)
-		continue;
-	}
+	default:
+	    break;
+	} /* End switch(object_type) */
 
-	w = x2 - x1;
-	h = y2 - y1;
-	x = x1;
-	y = y1;
 
-	if (w == 0 || h == 0)
-	    continue;
-
-	if (this_object->lp_properties.l_type == LT_DEFAULT)
-	    lpstyle = default_rectangle.lp_properties;
-	else
-	    lpstyle = this_object->lp_properties;
-	if (lpstyle.l_width > 0)
-	    lpstyle.l_width = this_object->lp_properties.l_width;
-	
-	if (this_object->fillstyle.fillstyle == FS_DEFAULT)
-	    fillstyle = &default_rectangle.fillstyle;
-	else
-	    fillstyle = &this_object->fillstyle;
-
-	term_apply_lp_properties(&lpstyle);
-	style = style_from_fill(fillstyle);
-
-	if (lpstyle.use_palette && term->filled_polygon) {
-	    (*term->filled_polygon)(4, fill_corners(style,x,y,w,h));
-	} else if (term->fillbox)
-	    (*term->fillbox) (style, x, y, w, h);
-
-	if (need_fill_border(fillstyle)) {
-	    (*term->move)   (x, y);
-	    (*term->vector) (x, y+h);
-	    (*term->vector) (x+w, y+h);
-	    (*term->vector) (x+w, y);
-	    (*term->vector) (x, y);
-	}
     }
 }
 #endif
@@ -5461,6 +5373,122 @@ fill_corners(int style, unsigned int x, unsigned int y, unsigned int w, unsigned
 }
 
 #ifdef EAM_OBJECTS
+void
+do_rectangle( int dimensions, t_object *this_object, int style )
+{
+    double x1, y1, x2, y2;
+    int x, y;
+    unsigned int w, h;
+    TBOOLEAN clip_x = FALSE;
+    TBOOLEAN clip_y = FALSE;
+    struct lp_style_type lpstyle;
+    struct fill_style_type *fillstyle;
+    t_rectangle *this_rect = &this_object->o.rectangle;
+
+	if (this_rect->type == 1) {
+	    double width, height;
+
+	    if (dimensions == 2 || this_rect->center.scalex == screen) {
+		map_position_double(&this_rect->center, &x1, &y1, "rect");
+		map_position_r(&this_rect->extent, &width, &height, "rect");
+	    } else if (splot_map) {
+		int junkw, junkh;
+		map3d_position_double(&this_rect->center, &x1, &y1, "rect");
+		map3d_position_r(&this_rect->extent, &junkw, &junkh, "rect");
+		width = junkw;
+		height = junkh;
+	    } else
+		return;
+
+	    x1 -= width/2;
+	    y1 -= height/2;
+	    x2 = x1 + width;
+	    y2 = y1 + height;
+	    w = width;
+	    h = height;
+	    if (this_rect->extent.scalex == first_axes
+	    ||  this_rect->extent.scalex == second_axes)
+		clip_x = TRUE;
+	    if (this_rect->extent.scaley == first_axes
+	    ||  this_rect->extent.scaley == second_axes)
+		clip_y = TRUE;
+
+	} else {
+	    if ((dimensions == 2) 
+	    ||  (this_rect->bl.scalex == screen && this_rect->tr.scalex == screen)) {
+		map_position_double(&this_rect->bl, &x1, &y1, "rect");
+		map_position_double(&this_rect->tr, &x2, &y2, "rect");
+	    } else if (splot_map) {
+		map3d_position_double(&this_rect->bl, &x1, &y1, "rect");
+		map3d_position_double(&this_rect->tr, &x2, &y2, "rect");
+	    } else
+		return;
+
+	    if (x1 > x2) {double t=x1; x1=x2; x2=t;}
+	    if (y1 > y2) {double t=y1; y1=y2; y2=t;}
+	    if (this_rect->bl.scalex == first_axes
+	    ||  this_rect->bl.scalex == second_axes)
+		clip_x = TRUE;
+	    if (this_rect->bl.scaley == first_axes
+	    ||  this_rect->bl.scaley == second_axes)
+		clip_y = TRUE;
+	}
+
+	/* FIXME - Should there be a generic clip_rectangle() routine?	*/
+	/* Clip to the graph boundaries, but only if the rectangle 	*/
+	/* itself was specified in plot coords.				*/
+	if (clip_area) {
+	    if (clip_x && x1 < clip_area->xleft)
+		x1 = clip_area->xleft;
+	    if (clip_x && x2 > clip_area->xright)
+		x2 = clip_area->xright;
+	    if (clip_y && y1 < clip_area->ybot)
+		y1 = clip_area->ybot;
+	    if (clip_y && y2 > clip_area->ytop)
+		y2 = clip_area->ytop;
+	    if (x1 > x2 || y1 > y2)
+		return;
+	}
+
+	w = x2 - x1;
+	h = y2 - y1;
+	x = x1;
+	y = y1;
+
+	if (w == 0 || h == 0)
+	    return;
+
+	if (this_object->lp_properties.l_type == LT_DEFAULT)
+	    lpstyle = default_rectangle.lp_properties;
+	else
+	    lpstyle = this_object->lp_properties;
+	if (lpstyle.l_width > 0)
+	    lpstyle.l_width = this_object->lp_properties.l_width;
+	
+	if (this_object->fillstyle.fillstyle == FS_DEFAULT)
+	    fillstyle = &default_rectangle.fillstyle;
+	else
+	    fillstyle = &this_object->fillstyle;
+
+	term_apply_lp_properties(&lpstyle);
+	style = style_from_fill(fillstyle);
+
+	if (lpstyle.use_palette && term->filled_polygon) {
+	    (*term->filled_polygon)(4, fill_corners(style,x,y,w,h));
+	} else if (term->fillbox)
+	    (*term->fillbox) (style, x, y, w, h);
+
+	if (need_fill_border(fillstyle)) {
+	    (*term->move)   (x, y);
+	    (*term->vector) (x, y+h);
+	    (*term->vector) (x+w, y+h);
+	    (*term->vector) (x+w, y);
+	    (*term->vector) (x, y);
+	}
+
+    return;
+}
+
 void
 do_ellipse( int dimensions, t_ellipse *e, int style )
 {
